less(Article.less) img fix  size for mobile images are reasonable size on mobile devices in drop

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -1,27 +1,27 @@
 .features {
-    margin-top: 2.75rem;
-}
-    .feature {
-      margin: 20px 10%;
-      padding: 0 20px 25px;
-      border: 1px solid lightgrey;
-      border-radius: 10px;
-      background-color: white;
-      position: relative;
-      height: 50px;
-      overflow: hidden;
-      box-shadow: 2px 2px 2px lightgrey;
-    
-      .feature-top {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      
-      span {
-          font-size: 3.5rem;
-      }
-  
+  margin-top: 2.75rem;
+
+  .feature {
+    margin: 20px 10%;
+    padding: 0 20px 25px;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    background-color: white;
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+    box-shadow: 2px 2px 2px lightgrey;
+
+    .feature-top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    span {
+      font-size: 3.5rem;
+    }
+
     .columns-mobile {
       display: flex;
       flex-direction: column;
@@ -33,12 +33,18 @@
       width: 100%;
     }
     .img-thumb {
-      width: 50%; 
-      //width: 65%;
+      max-width: 100%;
+      height: 35rem;
+      display: inline-flex;
+
+      @media @desktop {
+        height: 35%;
+      }
+      
     }
     .half {
       max-width: 100%;
-   }
+    }
 
     h2 {
       color: @bg-color;
@@ -46,30 +52,13 @@
       padding-bottom: 1rem;
       margin: 15px 0 0;
       display: inline-block;
-
     }
     .row {
-        padding-top: 2.5rem;
+      padding-top: 2.5rem;
     }
-    .close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-  
-    .expandButton {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      font-size: 12px;
-      color: grey;
-      cursor: pointer;
-      transform: translate(-50%);
-      background-color: white;
-    }
-   
   } // feature end
-  
+
   .feature-open {
-    height: 400px;
+    height: 800px;
   }
+}
